scenarios/vm-expansion/abc-hybrid/k8s/mgmt-cluster/07-sidecar.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: app-b-vm-no-iptables
  namespace: ns-b
spec:
  workloadSelector:
    labels:
      app: app-b
      version: v1
      class: vm
  ingress:
  - defaultEndpoint: 127.0.0.1:8000
    port:
      name: http
      number: 8000
      protocol: HTTP
  egress:
  - bind: 127.0.0.2
    port:
      number: 9411
    hosts:
    - istio-system/*
  - bind: 127.0.0.2
    port:
      number: 80
    hosts:
    - ns-c/app-c.ns-c.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: app-c-vm-no-iptables
  namespace: ns-c
spec:
  workloadSelector:
    labels:
      app: app-c
      version: v1
      class: vm
  ingress:
  - defaultEndpoint: 127.0.0.1:8000
    port:
      name: http
      number: 8000
      protocol: HTTP
  egress:
  - bind: 127.0.0.2
    port:
      number: 9411
    hosts:
    - istio-system/*
  - bind: 127.0.0.2
    port:
      number: 80
    hosts:
    - ns-a/app-a.ns-a.svc.cluster.local
    - ns-b/app-b.ns-b.svc.cluster.local
    - ns-c/app-c.ns-c.svc.cluster.local
